--- a/.github/workflows/windows-zerotier-rdp.yml
+++ b/.github/workflows/windows-zerotier-rdp.yml
@@ -1,4 +1,4 @@
-name: Windows RDP via ZeroTier (Optimized)
+name: Windows RDP via ZeroTier
 
 on:
   workflow_dispatch:
@@ -14,24 +14,31 @@ on:
         description: "RDP Password"
         required: false
         default: "MyPassword!123"
-      runtime_minutes:
-        description: "RDP Alive Minutes (max 355)"
-        required: false
-        default: "355"
 
 jobs:
   rdp:
     runs-on: windows-2022
-    timeout-minutes: 370
+    timeout-minutes: 60
 
     steps:
+      - name: Install ZeroTier (if missing)
+        shell: pwsh
+        run: |
+          $exe = "C:\Program Files\ZeroTier\One\zerotier-one_x64.exe"
+          if (-not (Test-Path $exe)) {
+            $url = "https://download.zerotier.com/RELEASES/1.14.0/dist/ZeroTier%20One.msi"
+            $msi = "$env:TEMP\zerotier-one.msi"
+            Invoke-WebRequest -Uri $url -OutFile $msi -UseBasicParsing
+            Start-Process msiexec.exe -ArgumentList "/i `"$msi`" /quiet /norestart" -Wait
+          }
+
       - name: Find ZeroTier CLI Path
         id: ztcli
         shell: pwsh
         run: |
           $paths = @(
-            "C:\Program Files (x86)\ZeroTier\One\zerotier-cli.bat",
-            "C:\Program Files\ZeroTier\One\zerotier-cli.bat"
+            "C:\Program Files\ZeroTier\One\zerotier-cli.bat",
+            "C:\Program Files (x86)\ZeroTier\One\zerotier-cli.bat"
           )
           foreach ($p in $paths) {
             if (Test-Path $p) {
@@ -68,32 +75,5 @@ jobs:
       - name: Show ZeroTier IP
         shell: pwsh
         run: |
-          $cli = "${{ steps.ztcli.outputs.cli }}"
-          $ip = (& $cli listnetworks | Select-String -Pattern "OK" | ForEach-Object {
-            ($_ -split '\s+') | Where-Object { $_ -match '^\d+\.\d+\.\d+\.\d+$' }
-          } | Select-Object -First 1)
-          Write-Host "ZeroTier IP: $ip"
-          echo "ztip=$ip" | Out-File -FilePath $env:GITHUB_OUTPUT -Append
-
-      - name: Output Connection Info
-        shell: pwsh
-        run: |
-          echo "================================================="
-          echo " RDP is ready via ZeroTier!"
-          echo " Username: ${{ github.event.inputs.rdp_user }}"
-          echo " Password: ${{ github.event.inputs.rdp_pass }}"
-          echo " ZeroTier Network: ${{ github.event.inputs.zt_network_id }}"
-          echo " ZeroTier IP: ${{ steps.ztcli.outputs.ztip }}"
-          echo "================================================="
-
-      - name: Keep Alive for Requested Time
-        shell: pwsh
-        run: |
-          $mins = [int]"${{ github.event.inputs.runtime_minutes }}"
-          if ($mins -gt 355) { $mins = 355 }
-          $end = (Get-Date).AddMinutes($mins)
-          while ((Get-Date) -lt $end) {
-            Write-Host "RDP ALIVE ($((($end - (Get-Date)).TotalMinutes) -as [int])) minutes left"
-            Start-Sleep -Seconds 60
-          }
+          ipconfig
           
